--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="page">
                 <h4 class="tit">好文分享</h4>
                 <div class="row">
-                    <div class="article col-12 col-md-4 ani1 animated" data-href="/page/article/article_01.html">
+                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated" data-href="/page/article/article_01.html">
                         <div class="frame">
                             <div class="mask">
                                 <span class="tit">網路賺錢大解析</span>
@@ -211,7 +211,7 @@
                             <h4>網路賺錢大解析</h4>
                         </div>
                     </div>
-                    <div class="article col-12 col-md-4 ani1 animated" data-href="/page/article/article_01.html">
+                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated" data-href="/page/article/article_01.html">
                         <div class="frame">
                             <div class="mask">
                                 <span class="tit">股神巴菲特的7大絕招</span>
@@ -220,7 +220,7 @@
                             <h4>股神巴菲特的7大絕招</h4>
                         </div>
                     </div>
-                    <div class="article col-12 col-md-4 ani1 animated" data-href="/page/article/article_01.html">
+                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated" data-href="/page/article/article_01.html">
                         <div class="frame">
                             <div class="mask">
                                 <span class="tit">馬雲準備進入AI不得不知</span>
