--- a/index.html
+++ b/index.html
@@ -202,32 +202,38 @@
             <div class="page">
                 <h4 class="tit">好文分享</h4>
                 <div class="row">
-                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated" data-href="page/article/article_01.html">
-                        <div class="frame">
-                            <div class="mask">
-                                <span class="tit">網路賺錢大解析</span>
+                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated">
+                        <a href="./page/article/article_01.html">
+                            <div class="frame">
+                                <div class="mask">
+                                    <span class="tit">網路賺錢大解析</span>
+                                </div>
+                                <img src="images/webfiles/8d880e10-8d07-4dac-a8a0-beeedc469c35.jpg" class="rwdimg">
+                                <h4>網路賺錢大解析</h4>
                             </div>
-                            <img src="images/webfiles/8d880e10-8d07-4dac-a8a0-beeedc469c35.jpg" class="rwdimg">
-                            <h4>網路賺錢大解析</h4>
-                        </div>
+                        </a>
                     </div>
-                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated" data-href="page/article/article_02.html">
-                        <div class="frame">
-                            <div class="mask">
-                                <span class="tit">股神巴菲特的7大絕招</span>
+                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated">
+                        <a href="./page/article/article_02.html">
+                            <div class="frame">
+                                <div class="mask">
+                                    <span class="tit">股神巴菲特的7大絕招</span>
+                                </div>
+                                <img src="images/webfiles/0e7fd01f-d393-4f03-9e67-46eda977f82c.jpg" class="rwdimg">
+                                <h4>股神巴菲特的7大絕招</h4>
                             </div>
-                            <img src="images/webfiles/0e7fd01f-d393-4f03-9e67-46eda977f82c.jpg" class="rwdimg">
-                            <h4>股神巴菲特的7大絕招</h4>
-                        </div>
+                        </a>
                     </div>
-                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated" data-href="page/article/article_03.html">
-                        <div class="frame">
-                            <div class="mask">
-                                <span class="tit">馬雲準備進入AI不得不知</span>
+                    <div class="article col-12 col-md-6 col-lg-4 ani1 animated">
+                        <a href="./page/article/article_03.html">
+                            <div class="frame">
+                                <div class="mask">
+                                    <span class="tit">馬雲準備進入AI不得不知</span>
+                                </div>
+                                <img src="images/webfiles/c7aa6397-dbd1-486f-80b3-548bd27be7c2.jpg" class="rwdimg">
+                                <h4>馬雲準備進入AI不得不知</h4>
                             </div>
-                            <img src="images/webfiles/c7aa6397-dbd1-486f-80b3-548bd27be7c2.jpg" class="rwdimg">
-                            <h4>馬雲準備進入AI不得不知</h4>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
